--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,11 +2,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="me.tgic.phonenumgeo">
     <uses-sdk android:minSdkVersion="17"/>
-    <application android:label="@string/app_name">
+
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
+    <application android:label="@string/app_name" >
         <provider android:authorities="com.android.i18n.phonenumbers.geocoding"
                   android:name=".PhonenumGeoProvider"
                   android:multiprocess="true"
                   android:exported="true"  >
         </provider>
+
+        <receiver android:name=".PhoneStateBroadcastReceiver" >
+            <intent-filter>
+                <action android:name="android.intent.action.PHONE_STATE" />
+            </intent-filter>
+        </receiver>
     </application>
 </manifest>
